@@ -3,3 +3,11 @@
 This is a [very small SAT solver][] written in Java.
 
 [very small SAT solver]: https://web.archive.org/web/20201109101535/http://www.cse.chalmers.se/~algehed/blogpostsHTML/SAT.html
+
+## Run examples
+
+Using Java 21:
+
+```shell
+java --enable-preview --source 21 SimpleSatSolver.java
+```
